methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:8: error: Unmatched closing brace '}' ignored here
  }}
   ^